# TerminalJack-TUI

./: .gitignore  CMakeLists.txt  Card.cpp  Card.h  LICENSE  README.md  main.cpp
.github/workflows/: windows-build.yml
